Changes since version 1.1.0
---------------------------

- Performance improvements due to inlining of some critical functions
  in BasicStream.

- Added menu with several options to throughput demo.

- Added Linux/SPARC port from Ferris McCormick

- Fixed a bug where daemonized Ice::Application wouldn't shutdown
  properly.

- Major Freeze update:

  - Removed the lowest Freeze layer. You should use instead Berkeley
    DB directly.

  - For Freeze Maps and Evictors, the underlying Berkeley DB
    environment is now always transactional. New configurations
    variables:

      - Freeze.<envName>.DbHome provides the path to the DB home, and
        defaults to <envName>.

      - Freeze.<envName>.DbRecoverFatal triggers "fatal recovery" when
        set to a value other than 0 (defaults to 0).

      - Freeze.<envName>.DbPrivate when set to a value other than 0
        tells Berkeley DB to use process private memory instead of
        shared memory. Defaults to 1. Set it to 0 when you want to run
        db_stat (or another Berkeley DB utility) on a running
        environment.

      - Freeze.<envName>.DbCheckpointPeriod: each Berkeley DB
        environment created by Freeze has an associated thread that
        checkpoints this environment every DbCheckpointPeriod minutes.
        Defaults to 3 minutes.

      - Freeze.<envName>.PeriodicCheckpointMinSize defines the minimum
        size in kbytes for the periodic checkpoint (see above). This
        value is passed to Berkeley DB's checkpoint function. Defaults
        to 0 (no minimum).

      - Freeze.<envName>.OldLogsAutoDelete: when set to a value other
        than 0, old transactional logs no longer in use are deleted
        after each periodic checkpoint. Defaults to 1.

     Such a Freeze-created Berkeley DB environment is created and
     opened when the first Freeze Map or Evictor using it is created,
     and is closed when the last Freeze Map or Evictor using it is
     closed.
